--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gas_accounting",
+  "name": "Spreadsheet_Accounting_Addon",
   "version": "0.0.1",
   "description": "",
   "scripts": {
